vcs/specs/parser/fail/expressions/missing_else_body.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, if, else, error
// @description: If expression with else but missing else body
// @expected-error: E018

fn test() {
    let x = if true { 1 } else
}
